fixed tests and docs